2002-05-05  Bruno Haible  <bruno@clisp.org>

	Avoid g++ 3.1 warnings.
	* src/base/hash/cl_hash.h (struct cl_heap_hashtable): Use typename
	where needed.
	* src/base/hash/cl_hash1.h (struct cl_heap_hashtable_1): typedef
	htxentry as a shortcut.
	* src/base/hash/cl_hash2.h (struct cl_heap_hashtable_2): Likewise.
	* src/base/hash/cl_hashset.h (struct cl_heap_hashtable_set): Likewise.
	* src/base/hash/cl_hashuniq.h (struct cl_heap_hashtable_uniq):
	Likewise.

2002-03-15  Bruno Haible  <bruno@clisp.org>

	* cln.tex: Document problem with GNU make 3.77.
	Reported by Michael Somos <somos@grail.cba.csuohio.edu>.

2002-02-16  Richard Kreckel  <kreckel@ginac.de>

        * cln.m4: quote macro name.
          Pointed out by Roberto Bagnara.

2002-01-20  Richard Kreckel  <kreckel@ginac.de>

        * autoconf/config.{guess,sub}: Update to GNU version 2002-01-02.
          (the old one was broken on Linux/Mips.)

2002-01-04  Richard Kreckel  <kreckel@ginac.de>

        * autoconf/autoconf.m4f: get brutal in order to adhere to FHS.
        * Version 1.1.4 released.

2002-01-03  Richard Kreckel  <kreckel@ginac.de>

        * autoconf/acinclude.m4: revamp MPN-matcher.
        * autoconf/aclocal.m4: upgrade to autoconf-2.52 infrastructure,
          sync with CLisp from CVS.
        * autoconf/autoconf: Likewise.
        * autoconf/autoconf.m4f: Likewise (new file).
        * configure.ac: Likewise (new file, replaces configure.in).
        * configure.in: Likewise (deleted, replaced by configure.ac).
        * autoconf/config.{guess,sub}: Update to GNU version 2001-12-13.
        * src/Makefile.in: made VPATH safe for autoconf-2.52.
        * include/cln/config.h.in: Add __s390__.

2001-12-31  Richard Kreckel  <kreckel@ginac.de>

        * src/base/digitseq/cl_DS.h: <gmp.h> is not included extern "C"
          any more since GMP4 has some C++ support in it.

2001-12-14  Richard Kreckel  <kreckel@ginac.de>

        * include/cln/modules.h, include/cln/object.h: add support for