@@ -1,6 +1,10 @@
 2002-05-05  Bruno Haible  <bruno@clisp.org>
 
 	Avoid g++ 3.1 warnings.
+	* src/base/cl_offsetof.h (offsetof): Redefine each time.
+	* src/base/digitseq/cl_DS.h: Include "cl_offsetof.h" after <gmp.h>.
+
+	Avoid g++ 3.1 warnings.
 	* src/base/hash/cl_hash.h (struct cl_heap_hashtable): Use typename
 	where needed.
 	* src/base/hash/cl_hash1.h (struct cl_heap_hashtable_1): typedef
